Update impact numbers in index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="impact-card">
                     <div class="impact-icon">📊</div>
-                    <div class="impact-number">10M+</div>
+                    <div class="impact-number">1<span class="unit">M</span>+</div>
                     <div class="impact-label">Training Samples</div>
                     <div class="impact-detail">Large-scale distributed systems</div>
                 </div>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="impact-card">
                     <div class="impact-icon">💡</div>
-                    <div class="impact-number">7-9</div>
+                    <div class="impact-number">9</div>
                     <div class="impact-label">Patents & Inventions</div>
                     <div class="impact-detail">Innovation disclosures</div>
                 </div>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="impact-card">
                     <div class="impact-icon">📚</div>
-                    <div class="impact-number">10+</div>
+                    <div class="impact-number">10<span class="unit">M</span>+</div>
                     <div class="impact-label">Conference Presentations</div>
                     <div class="impact-detail">IEEE & international venues</div>
                 </div>
