Update impact numbers in index.html

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                 </div>
                 <div class="impact-card">
                     <div class="impact-icon">🖼️</div>
-                    <div class="impact-number">1M+</div>
+                    <div class="impact-number">1&#77;+</div>
                     <div class="impact-label">Synthetic Images Generated</div>
                     <div class="impact-detail">Photorealistic training data</div>
                 </div>
                 <div class="impact-card">
                     <div class="impact-icon">📊</div>
-                    <div class="impact-number">1<span class="unit">M</span>+</div>
+                    <div class="impact-number">10&#77;+</div>
                     <div class="impact-label">Training Samples</div>
                     <div class="impact-detail">Large-scale distributed systems</div>
                 </div>
