Comment out dimensionality reduction impact card
Commented out the impact-card section related to dimensionality reduction and FRR reduction.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="impact-label">Training Samples</div>
                     <div class="impact-detail">Large-scale distributed systems</div>
                 </div>
-                <div class="impact-card">
+                <!-- <div class="impact-card">
                     <div class="impact-icon">🎯</div>
                     <div class="impact-number">60%</div>
                     <div class="impact-label">Dimensionality Reduction</div>
@@ -109,7 +109,7 @@
                     <div class="impact-number">39%</div>
                     <div class="impact-label">FRR Reduction</div>
                     <div class="impact-detail">In fingerprint recognition</div>
-                </div>
+                </div> -->
                 <div class="impact-card">
                     <div class="impact-icon">💡</div>
                     <div class="impact-number">9</div>
