Fix impact number HTML structure

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="impact-card">
                     <div class="impact-icon">📚</div>
-                    <div class="impact-number">10<span class="unit">M</span>+</div>
+                    <div class="impact-number">10</span>+</div>
                     <div class="impact-label">Conference Presentations</div>
                     <div class="impact-detail">IEEE & international venues</div>
                 </div>
